style/style.css
@layer base, components, utils;

@import "@andreasphil/design-system/style.css" layer(base);
@import "@andreasphil/design-system/utils.css" layer(utils);

@import "./components/item.css" layer(components);
@import "./components/itemCard.css" layer(components);
@import "./components/layout.css" layer(components);
@import "./views/board.css" layer(components);
@import "./views/pages.css" layer(components);
@import "./views/settings.css" layer(components);

@font-face {
  font-family: "Fira Code Variable";
  src: url("../assets/fonts/FiraCode-VF.woff2") format("woff2-variations");
  font-weight: 300 700;
  font-style: normal;
}

@layer base {
  :root {
    --body-padding-x: 0rem;
    --body-padding-y: 0rem;
    --body-width: auto;
    --font-family-mono: "Fira Code Variable", ui-monospace, monospace;
    --font-size-h1: var(--font-size);
    --font-size-h2: var(--font-size);
    --font-size: 14px;
    --on-primary: var(--neutral-700);
    --primary: oklch(85% 0.14 var(--tint));
    --tint: 87;
  }

  body {
    min-width: 640px;
  }

  aside nav button {
    justify-content: start;
    width: 100%;
  }

  article {
    min-height: calc(100dvh - calc(2 * var(--outer-spacing-y)));
  }

  :is(h1, h2, h3, h4, h5, h6) {
    --outer-spacing-y: 0;
  }

  [data-tooltip]::after {
    font-family: var(--font-family);
  }
}

@layer components {
  .editor {
    caret-color: var(--primary);
    font-family: var(--font-family-mono);
    font-size: var(--font-size-mono);
    margin: auto;
    max-width: 50rem;

    menu {
      margin: 0.25rem 0 0 0;
      font-family: var(--font-family);
      font-size: var(--font-size);
    }
  }
}

